--- a/Localization/ru-RU.lang
+++ b/Localization/ru-RU.lang
@@ -14,6 +14,8 @@ ItemTooltip.Zapinator=Удаленная вещь.
 ItemName.Icemourne=Ледяная скорбь
 ItemTooltip.Icemourne=Удаленная вещь.
 ItemName.PartySword=Меч Вечеринки
+ItemName.NanoGun=Нано Пушка
+ItemTooltip.NanoGun=Превращает пули в Нано пули.
 
 ItemName.InfinityConfettiGun=Бесконечная конфетти пушка
 ItemTooltip.InfinityConfettiGun=Веселись!
@@ -22,34 +24,34 @@ ItemName.SolarFlareChainsaw=Бензопила солнечной вспышки
 ItemName.VortexChainsaw=Бензопила вихря
 ItemName.StardustChainsaw=Бензопила звёздной пыли
 ItemName.NebulaChainsaw=Бензопила туманности
-ItemTooltip.SolarFlareChainsaw=Удаленная вещь.
-ItemTooltip.VortexChainsaw=Удаленная вещь.
-ItemTooltip.StardustChainsaw=Удаленная вещь.
-ItemTooltip.NebulaChainsaw=Удаленная вещь.
+ItemTooltip.SolarFlareChainsaw=Недостижимая вещь.
+ItemTooltip.VortexChainsaw=Недостижимая вещь.
+ItemTooltip.StardustChainsaw=Недостижимая вещь.
+ItemTooltip.NebulaChainsaw=Недостижимая вещь.
 
 ItemName.SolarFlareDrill=Бур солнечной вспышки
 ItemName.VortexDrill=Бур вихря
 ItemName.StardustDrill=Бур звёздной пыли
 ItemName.NebulaDrill=Бур туманности
-ItemTooltip.SolarFlareDrill=Удаленная вещь.
-ItemTooltip.VortexDrill=Удаленная вещь.
-ItemTooltip.StardustDrill=Удаленная вещь.
-ItemTooltip.NebulaDrill=Удаленная вещь.
+ItemTooltip.SolarFlareDrill=Недостижимая вещь.
+ItemTooltip.VortexDrill=Недостижимая вещь.
+ItemTooltip.StardustDrill=Недостижимая вещь.
+ItemTooltip.NebulaDrill=Недостижимая вещь.
 
 ItemName.SolarFlareAxe=Топор солнечной вспышки
 ItemName.VortexAxe=Топор вихря
 ItemName.StardustAxe=Топор звёздной пыли
 ItemName.NebulaAxe=Топор туманности
-ItemTooltip.SolarFlareAxe=Удаленная вещь.
-ItemTooltip.VortexAxe=Удаленная вещь.
-ItemTooltip.StardustAxe=Удаленная вещь.
-ItemTooltip.NebulaAxe=Удаленная вещь.
+ItemTooltip.SolarFlareAxe=Недостижимая вещь.
+ItemTooltip.VortexAxe=Недостижимая вещь.
+ItemTooltip.StardustAxe=Недостижимая вещь.
+ItemTooltip.NebulaAxe=Недостижимая вещь.
 
 ItemName.SolarFlareHammer=Молот солнечной вспышки
 ItemName.VortexHammer=Молот вихря
 ItemName.StardustHammer=Молот звёздной пыли
 ItemName.NebulaHammer=Молот туманности
-ItemTooltip.SolarFlareHammer=Удаленная вещь.
-ItemTooltip.VortexHammer=Удаленная вещь.
-ItemTooltip.StardustHammer=Удаленная вещь.
-ItemTooltip.NebulaHammer=Удаленная вещь.
+ItemTooltip.SolarFlareHammer=Недостижимая вещь.
+ItemTooltip.VortexHammer=Недостижимая вещь.
+ItemTooltip.StardustHammer=Недостижимая вещь.
+ItemTooltip.NebulaHammer=Недостижимая вещь.
