--- a/Localization/ru-RU.lang
+++ b/Localization/ru-RU.lang
@@ -14,6 +14,7 @@ ItemTooltip.Zapinator=Удаленная вещь.
 ItemName.Icemourne=Ледяная скорбь
 ItemTooltip.Icemourne=Удаленная вещь.
 ItemName.Firemourne=Огненная скорбь
+ItemName.Venomourne=Меч Венома
 ItemName.PartySword=Меч Вечеринки
 ItemName.NanoGun=Нано Пушка
 ItemTooltip.NanoGun=Превращает пули в Нано пули.
